src/test/ui/generic-associated-types/missing_lifetime_const.stderr
warning: the feature `generic_associated_types` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/missing_lifetime_const.rs:1:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information

error[E0107]: this associated type takes 1 lifetime argument but 0 lifetime arguments were supplied
  --> $DIR/missing_lifetime_const.rs:9:24
   |
LL |     let _: <T as Foo>::Assoc<3>;
   |                        ^^^^^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/missing_lifetime_const.rs:5:10
   |
LL |     type Assoc<'a, const N: usize>;
   |          ^^^^^ --
help: add missing lifetime argument
   |
LL |     let _: <T as Foo>::Assoc<'a, 3>;
   |                              ^^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0107`.
